examples/bad/result_try_in_option.mko
// EXPECT: `?` needs Result or Option
// `?` still requires Result or Option — not bare string.
fn main() -> Option[int] {
    let x = "no"?
    return Some(1)
}
